SFDC Automation/src/objects/Rebillable_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Abuse_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Abuse Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Abuse Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Dbltime_Labour_Set_MU__c</fullName>
        <label>Abuse Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Dbltime_Rate_Flag__c</fullName>
        <label>Abuse Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Abuse type.</description>
        <label>Abuse_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abuse_Outside_Misc_Fixed_MU__c</fullName>
        <label>Abuse Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Outside_Misc_Flag__c</fullName>
        <label>Abuse Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_Outside_Misc_Percent_MU__c</fullName>
        <label>Abuse Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Outside_Misc_Set_MU__c</fullName>
        <label>Abuse Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Abuse Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Overtime_Labour_Percent_MU__c</fullName>
        <label>Abuse Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Overtime_Labour_Set_MU__c</fullName>
        <label>Abuse Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Overtime_Rate_Flag__c</fullName>
        <label>Abuse Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_Parts_Rate_Percent__c</fullName>
        <label>Abuse Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Regular_Labour_Fixed_MU__c</fullName>
        <label>Abuse Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Regular_Labour_Percent_MU__c</fullName>
        <label>Abuse Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Regular_Labour_Set_MU__c</fullName>
        <label>Abuse Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Regular_Rate_Flag__c</fullName>
        <label>Abuse Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_Service_Veh_Rate__c</fullName>
        <label>Abuse Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abuse_Tire_Rate_Percent_MU__c</fullName>
        <label>Abuse Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abuse_Wrecker_Rate__c</fullName>
        <label>Abuse Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Accident Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Accident Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Dbltime_Labour_Set_MU__c</fullName>
        <label>Accident Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Dbltime_Rate_Flag__c</fullName>
        <label>Accident Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accident_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Accident type.</description>
        <label>Accident_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Outside_Misc_Fixed_MU__c</fullName>
        <label>Accident Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Outside_Misc_Flag__c</fullName>
        <label>Accident Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accident_Outside_Misc_Percent_MU__c</fullName>
        <label>Accident Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Outside_Misc_Set_MU__c</fullName>
        <label>Accident Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Accident Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Overtime_Labour_Percent_MU__c</fullName>
        <label>Accident Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Overtime_Labour_Set_MU__c</fullName>
        <label>Accident Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Overtime_Rate_Flag__c</fullName>
        <label>Accident Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accident_Parts_Rate_Percent__c</fullName>
        <label>Accident Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Regular_Labour_Fixed_MU__c</fullName>
        <label>Accident Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Regular_Labour_Percent_MU__c</fullName>
        <label>Accident Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Regular_Labour_Set_MU__c</fullName>
        <label>Accident Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Regular_Rate_Flag__c</fullName>
        <label>Accident Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accident_Service_Veh_Rate__c</fullName>
        <label>Accident Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accident_Tire_Rate_Percent_MU__c</fullName>
        <label>Accident Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accident_Wrecker_Rate__c</fullName>
        <label>Accident Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Accomodation Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Accomodation Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Dbltime_Labour_Set_MU__c</fullName>
        <label>Accomodation Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Dbltime_Rate_Flag__c</fullName>
        <label>Accomodation Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Accomodation type.</description>
        <label>Accomodation_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accomodation_Outside_Misc_Fixed_MU__c</fullName>
        <label>Accomodation Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Outside_Misc_Flag__c</fullName>
        <label>Accomodation Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Outside_Misc_Percent_MU__c</fullName>
        <label>Accomodation Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Outside_Misc_Set_MU__c</fullName>
        <label>Accomodation Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Accomodation Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Overtime_Labour_Percent_MU__c</fullName>
        <label>Accomodation Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Overtime_Labour_Set_MU__c</fullName>
        <label>Accomodation Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Overtime_Rate_Flag__c</fullName>
        <label>Accomodation Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Parts_Rate_Percent__c</fullName>
        <label>Accomodation Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Regular_Labour_Fixed_MU__c</fullName>
        <label>Accomodation Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Regular_Labour_Percent_MU__c</fullName>
        <label>Accomodation Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Regular_Labour_Set_MU__c</fullName>
        <label>Accomodation Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Regular_Rate_Flag__c</fullName>
        <label>Accomodation Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomodation_Service_Veh_Rate__c</fullName>
        <label>Accomodation Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accomodation_Tire_Rate_Percent_MU__c</fullName>
        <label>Accomodation Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accomodation_Wrecker_Rate__c</fullName>
        <label>Accomodation Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <label>Customer No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diesel_Fixed_MU__c</fullName>
        <label>Diesel Fixed MU</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diesel_MU_Method__c</fullName>
        <label>Diesel MU Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diesel_MU_Percent__c</fullName>
        <label>Diesel MU Percent</label>
        <precision>14</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diesel_Set_Rate__c</fullName>
        <label>Diesel Set Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domicile_Branch_Code__c</fullName>
        <label>Domicile Branch Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipLabel>Rebillable Rates</relationshipLabel>
        <relationshipName>Rebillable_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LesseeNo__c</fullName>
        <label>Lessee ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_LBU__c</fullName>
        <label>Location LBU</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_RO_Effective_Date__c</fullName>
        <label>Location RO Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_RO_Rate__c</fullName>
        <label>Location RO Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Overtime_Labour_Percent_MU__c</fullName>
        <label>Misc. Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Miscellaneous Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Miscellaneous Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Dbltime_Labour_Set_MU__c</fullName>
        <label>Miscellaneous Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Dbltime_Rate_Flag__c</fullName>
        <label>Miscellaneous Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Miscellaneous type.</description>
        <label>Miscellaneous_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Outside_Misc_Fixed_MU__c</fullName>
        <label>Miscellaneous Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Outside_Misc_Flag__c</fullName>
        <label>Miscellaneous Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Outside_Misc_Percent_MU__c</fullName>
        <label>Miscellaneous Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Outside_Misc_Set_MU__c</fullName>
        <label>Miscellaneous Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Miscellaneous Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Overtime_Labour_Percent_MU__c</fullName>
        <label>Miscellaneous Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Overtime_Labour_Set_MU__c</fullName>
        <label>Miscellaneous Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Overtime_Rate_Flag__c</fullName>
        <label>Miscellaneous Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Parts_Rate_Percent__c</fullName>
        <label>Miscellaneous Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Regular_Labour_Fixed_MU__c</fullName>
        <label>Miscellaneous Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Regular_Labour_Percent_MU__c</fullName>
        <label>Miscellaneous Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Regular_Labour_Set_MU__c</fullName>
        <label>Miscellaneous Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Regular_Rate_Flag__c</fullName>
        <label>Miscellaneous Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Service_Veh_Rate__c</fullName>
        <label>Miscellaneous Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Tire_Rate_Percent_MU__c</fullName>
        <label>Miscellaneous Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Wrecker_Rate__c</fullName>
        <label>Miscellaneous Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Fixed_MU__c</fullName>
        <label>Oil Fixed MU</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_MU_Method__c</fullName>
        <label>Oil MU Method</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oil_MU_Percent__c</fullName>
        <label>Oil MU Percent</label>
        <precision>14</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Set_Rate__c</fullName>
        <label>Oil Set Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebill_Rate_Flag__c</fullName>
        <description>&quot;When RBRRECTP = A, populate Diesel MU Method, Diesel MU Percent, Diesel Fixed MU, Diesel Set Rate, Oil MU Method, Oil MU Percent, Oil Fixed MU, Oil Set Rate&quot;</description>
        <label>Rebill Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Repair Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Repair Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Dbltime_Labour_Set_MU__c</fullName>
        <label>Repair Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Dbltime_Rate_Flag__c</fullName>
        <label>Repair Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Repair type.</description>
        <label>Repair_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Outside_Misc_Fixed_MU__c</fullName>
        <label>Repair Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Outside_Misc_Flag__c</fullName>
        <label>Repair Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Outside_Misc_Percent_MU__c</fullName>
        <label>Repair Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Outside_Misc_Set_MU__c</fullName>
        <label>Repair Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Repair Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Overtime_Labour_Percent_MU__c</fullName>
        <label>Repair Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Overtime_Labour_Set_MU__c</fullName>
        <label>Repair Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Overtime_Rate_Flag__c</fullName>
        <label>Repair Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Parts_Rate_Percent__c</fullName>
        <label>Repair Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Regular_Labour_Fixed_MU__c</fullName>
        <label>Repair Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Regular_Labour_Percent_MU__c</fullName>
        <label>Repair Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Regular_Labour_Set_MU__c</fullName>
        <label>Repair Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Regular_Rate_Flag__c</fullName>
        <label>Repair Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Service_Veh_Rate__c</fullName>
        <label>Repair Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Tire_Rate_Percent_MU__c</fullName>
        <label>Repair Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repair_Wrecker_Rate__c</fullName>
        <label>Repair Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Dbltime_Labour_Fixed_MU__c</fullName>
        <label>Special Dbltime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Dbltime_Labour_Percent_MU__c</fullName>
        <label>Special Dbltime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Dbltime_Labour_Set_MU__c</fullName>
        <label>Special Dbltime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Dbltime_Rate_Flag__c</fullName>
        <label>Special Dbltime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_ListMinusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains the List Minus flag for Special type.</description>
        <label>Special_ListMinusFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Outside_Misc_Fixed_MU__c</fullName>
        <label>Special Outside Misc. Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Outside_Misc_Flag__c</fullName>
        <label>Special Outside Misc. Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Outside_Misc_Percent_MU__c</fullName>
        <label>Special Outside Misc. Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Outside_Misc_Set_MU__c</fullName>
        <label>Special Outside Misc. Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Overtime_Labour_Fixed_MU__c</fullName>
        <label>Special Overtime Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Overtime_Labour_Percent_MU__c</fullName>
        <label>Special Overtime Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Overtime_Labour_Set_MU__c</fullName>
        <label>Special Overtime Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Overtime_Rate_Flag__c</fullName>
        <label>Special Overtime Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Parts_Rate_Percent__c</fullName>
        <label>Special Parts Rate Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Regular_Labour_Fixed_MU__c</fullName>
        <label>Special Regular Labour Fixed MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Regular_Labour_Percent_MU__c</fullName>
        <label>Special Regular Labour Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Regular_Labour_Set_MU__c</fullName>
        <label>Special Regular Labour Set MU</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Regular_Rate_Flag__c</fullName>
        <label>Special Regular Rate Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Service_Veh_Rate__c</fullName>
        <label>Special Service Veh. Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Tire_Rate_Percent_MU__c</fullName>
        <label>Special Tire Rate Percent MU</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Wrecker_Rate__c</fullName>
        <label>Special Wrecker Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Rebillable Rates</relationshipLabel>
        <relationshipName>Rebillable_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ext_rates__c</fullName>
        <externalId>true</externalId>
        <label>ext_rates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Rebillable Rates</label>
    <nameField>
        <displayFormat>RBR-{000000}</displayFormat>
        <label>Rebillable Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebillable Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>